--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.simpra.sms_cleaner"
-    android:versionCode="1"
-    android:versionName="1.0" android:installLocation="internalOnly">
+    android:installLocation="internalOnly"
+    android:versionCode="2"
+    android:versionName="MovingOn" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.WRITE_SMS"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +26,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="ru.simpra.sms_cleaner.SettingsActivity"
+            android:label="@string/title_activity_settings" >
         </activity>
     </application>
 
