--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-/bin
-/gen
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
