--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="ru.simpra.sms_cleaner"
     android:installLocation="internalOnly"
     android:versionCode="2"
-    android:versionName="MovingOn" >
+    android:versionName="Templater" >
 
     <uses-sdk
         android:minSdkVersion="8"
