--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.simpra.sms_cleaner"
     android:installLocation="internalOnly"
-    android:versionCode="2"
-    android:versionName="Templater" >
+    android:versionCode="3"
+    android:versionName="1.2.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -30,6 +30,13 @@
         <activity
             android:name="ru.simpra.sms_cleaner.SettingsActivity"
             android:label="@string/title_activity_settings" >
+        </activity>
+        <activity
+            android:name="ru.simpra.sms_cleaner.HelpActivity"
+            android:label="@string/regexp_help" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ru.simpra.sms_cleaner.SettingsActivity" />
         </activity>
     </application>
 
